# curriculo-df-dataset

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
data/: dataset_card.md
data/extracted/: curriculo_completo.md
data/processed/: curriculo_completo.jsonl  curriculo_parcial.jsonl
docs/: architecture.md  decisions.md  roadmap.md
pipeline/: 01_extract_docling.py  02_parse_structure.py  03_enrich_llm.py  04_validate.py  05_publish_hf.py  06_gradio_space.py
schema/: curriculo_schema.json
space/: README.md  app.py  requirements.txt
