[project]
name = "curriculo-df-dataset"
version = "0.1.0"
description = "Pipeline de extração e dataset público do Currículo em Movimento do Distrito Federal – Ensino Fundamental"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Wesley Almeida", email = "walmeida@gmail.com" }]
keywords = ["education", "curriculum", "dataset", "brazil", "NLP", "huggingface"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "docling>=2.5.0",
    "groq>=0.9.0",
    "python-dotenv>=1.0.0",
    "datasets>=2.19.0",
    "huggingface-hub>=0.23.0",
    "jsonschema>=4.22.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "tqdm>=4.66.0",
    "loguru>=0.7.0",
]

[project.urls]
Homepage       = "https://github.com/walmeidadf/curriculo-df-dataset"
"HF Dataset"   = "https://huggingface.co/datasets/walmeidadf/curriculo-em-movimento-df"
Issues         = "https://github.com/walmeidadf/curriculo-df-dataset/issues"

[dependency-groups]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]
